# Atomic-Bomberman

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  README  README-developers  README-win32  TODO  bootstrap  configure.in
data/anim/BACKUP STAND/: stande.ani  standn.ani  stands.ani  standw.ani
data/anim/STAND/: CROPPED-NOALPHA-WLKE0001.tga  CROPPED-NOALPHA-WLKN0002.tga  CROPPED-NOALPHA-WLKS0008.tga  CROPPED-NOALPHA-WLKW0002.tga  NOALPHA-WLKE0001.tga  NOALPHA-WLKN0002.tga  NOALPHA-WLKS0008.tga  NOALPHA-WLKW0002.tga  STAND.tga  WLKE0001.tga  WLKN0002.tga  WLKS0008.tga  WLKW0002.tga
data/anim/bomb/: BMB1001.TGA  BMB1002.TGA  BMB1003.TGA  BMB1004.TGA  BMB1005.TGA  BMB1006.TGA  BMB1007.TGA  BMB1008.TGA  BMB1009.TGA  BMB1010.TGA  BMBC1.TGA  BMBC2.TGA  BMBC3.TGA  BMBC4.TGA  BMBC5.TGA  BMBC6.TGA  BMBC7.TGA  bomb.ani
data/anim/corner01/: CORNER0.ANI  CORNER2.ANI  CORNER3.ANI  CORNER4.ANI  CORNER5.ANI  CORNER6.ANI  CORNER7.ANI  OT-A0000.TGA  OT-A0001.TGA  OT-A0004.TGA  OT-A0012.TGA  OT-A0013.TGA  OT-A0015.TGA  OT-A0019.TGA  OT-A0023.TGA  OT-A0025.TGA  OT-A0028.TGA  OT-A0030.TGA  OT-A0032.TGA  OT-A0033.TGA  OT-A0035.TGA  OT-A0038.TGA  OT-A0039.TGA  OT-A0042.TGA  OT-A0044.TGA  OT-A0045.TGA  OT-A0049.TGA  OT-A0054.TGA  OT-A0056.TGA  OT-A0061.TGA  OT-A0062.TGA  OT-A0065.TGA  OT-A0067.TGA  OT-A0068.TGA  OT-A0070.TGA  OT-A0071.TGA  OT-A0074.TGA  OT-A0100.TGA  corner01.ani
data/anim/dying/: XPLODE10.ANI  XPLODE11.ANI  XPLODE12.ANI  XPLODE13.ANI  XPLODE14.ANI  XPLODE15.ANI  XPLODE16.ANI  XPLODE17.ANI  XPLODE2.ANI  XPLODE3.ANI  XPLODE4.ANI  XPLODE5.ANI  XPLODE6.ANI  XPLODE7.ANI  XPLODE8.ANI  XPLODE9.ANI
data/anim/dying01/: EXA0000.TGA  EXA0006.TGA  EXA0007.TGA  EXA0008.TGA  EXA0009.TGA  EXA0010.TGA  EXA0011.TGA  EXA0012.TGA  EXA0013.TGA  EXA0014.TGA  EXA0015.TGA  EXA0016.TGA  EXA0017.TGA  EXA0018.TGA  EXA0019.TGA  EXA0020.TGA  EXA0021.TGA  EXA0032.TGA  EXA0057.TGA  EXA0074.TGA  EXA0075.TGA  EXA0076.TGA  EXA0077.TGA  EXA0078.TGA  EXA0079.TGA  EXA0080.TGA  EXA0081.TGA  EXA0082.TGA  EXA0083.TGA  EXA0084.TGA  EXA0085.TGA  EXA0086.TGA  EXA0087.TGA  EXA0088.TGA  EXA0089.TGA  EXA0090.TGA  EXA0091.TGA  EXA0092.TGA  EXA0093.TGA  EXA0094.TGA  (+2 more)
data/anim/dying02/: EXB0000.TGA  EXB0002.TGA  EXB0003.TGA  EXB0004.TGA  EXB0005.TGA  EXB0006.TGA  EXB0007.TGA  EXB0008.TGA  EXB0009.TGA  EXB0010.TGA  EXB0011.TGA  EXB0012.TGA  EXB0013.TGA  EXB0014.TGA  EXB0015.TGA  EXB0016.TGA  EXB0017.TGA  EXB0018.TGA  EXB0019.TGA  EXB0020.TGA  EXB0021.TGA  EXB0022.TGA  EXB0023.TGA  EXB0024.TGA  EXB0025.TGA  EXB0026.TGA  EXB0027.TGA  EXB0028.TGA  EXB0029.TGA  EXB0030.TGA  EXB0031.TGA  EXB0032.TGA  EXB0033.TGA  EXB0034.TGA  EXB0035.TGA  EXB0036.TGA  EXB0037.TGA  EXB0038.TGA  EXB0056.TGA  dying02.ani
data/anim/flame/: END1.TGA  END2.TGA  END3.TGA  END4.TGA  END5.TGA  ENDD1.TGA  ENDD2.TGA  ENDD3.TGA  ENDD4.TGA  ENDD5.TGA  ENDL1.TGA  ENDL2.TGA  ENDL3.TGA  ENDL4.TGA  ENDL5.TGA  ENDU1.TGA  ENDU2.TGA  ENDU3.TGA  ENDU4.TGA  ENDU5.TGA  SQUARE1.TGA  SQUARE2.TGA  SQUARE3.TGA  SQUARE4.TGA  SQUARE5.TGA  STREAM1.TGA  STREAM2.TGA  STREAM3.TGA  STREAM4.TGA  STREAM5.TGA  STRMU1.TGA  STRMU2.TGA  STRMU3.TGA  STRMU4.TGA  STRMU5.TGA  ende.ani  endn.ani  ends.ani  endw.ani  middle.ani  (+2 more)
data/anim/stand/: WLKE0001.TGA  WLKS0008.TGA  stande.ani  standn.ani  stands.ani  standw.ani
data/anim/tile0/: BLANK.TGA  BRIK00.TGA  ROCK.TGA  brik.ani  rock.ani
data/anim/trigger/: DIGIB001.TGA  DIGIB002.TGA  DIGIB003.TGA  DIGIB004.TGA  DIGIB005.TGA  DIGIB006.TGA  DIGIB007.TGA  DIGIB008.TGA  DIGIB009.TGA  DIGIB010.TGA  TRIGBOMB.ANI  trigger.ani
data/anim/walk/: WLKE0000.TGA  WLKE0002.TGA  WLKE0003.TGA  WLKE0004.TGA  WLKE0005.TGA  WLKE0006.TGA  WLKE0007.TGA  WLKE0008.TGA  WLKE0009.TGA  WLKE0010.TGA  WLKE0011.TGA  WLKE0012.TGA  WLKE0013.TGA  WLKE0014.TGA  WLKN0000.TGA  WLKN0001.TGA  WLKN0002.TGA  WLKN0003.TGA  WLKN0004.TGA  WLKN0005.TGA  WLKN0006.TGA  WLKN0007.TGA  WLKN0008.TGA  WLKN0009.TGA  WLKN0010.TGA  WLKN0011.TGA  WLKN0012.TGA  WLKN0013.TGA  WLKN0014.TGA  WLKS0000.TGA  WLKS0001.TGA  WLKS0002.TGA  WLKS0003.TGA  WLKS0004.TGA  WLKS0005.TGA  WLKS0006.TGA  WLKS0007.TGA  WLKS0009.TGA  WLKS0010.TGA  WLKS0011.TGA  (+22 more)
data/config/: animlist.res  imagelist.res  keys.cfg  messagelist.res  options.cfg  sound2text.res  soundlist.res  valuelist.res
data/images/: .cvsignore
data/images/gui/: bor_hf_b.tga  bor_hf_bl.tga  bor_hf_br.tga  bor_hf_l.tga  bor_hf_r.tga  bor_hf_t.tga  bor_hf_tl.tga  bor_hf_tr.tga  bor_md_b.tga  bor_md_bl.tga  bor_md_br.tga  bor_md_l.tga  bor_md_r.tga  bor_md_t.tga  bor_md_tl.tga  bor_md_tr.tga  bor_mo_b.tga  bor_mo_bl.tga  bor_mo_br.tga  bor_mo_l.tga  bor_mo_r.tga  bor_mo_t.tga  bor_mo_tl.tga  bor_mo_tr.tga  bor_nf_b.tga  bor_nf_bl.tga  bor_nf_br.tga  bor_nf_l.tga  bor_nf_r.tga  bor_nf_t.tga  bor_nf_tl.tga  bor_nf_tr.tga  chk_hf_bor.tga  chk_hf_cro.tga  chk_md_bor.tga  chk_md_cro.tga  chk_mo_bor.tga  chk_mo_cro.tga  chk_nf_bor.tga  chk_nf_cro.tga  (+29 more)
msvs/ab/: .cvsignore  ab.aps  ab.sln  ab.vcproj  resource.h
src/: CMakeLists.txt  Makefile.am  ab.cfg  animmng.cpp  animmng.h  cell.cpp  cell.h  cellblank.cpp  cellblank.h  cellbomb.cpp  cellbomb.h  cellbreakable.cpp  cellbreakable.h  cellextra.cpp  cellextra.h  cellflame.cpp  cellflame.h  cellpowerup.cpp  cellpowerup.h  cellsolid.cpp  cellsolid.h  defines.h  diseases.cpp  diseases.h  enumblocks.h  enumdiseases.h  enumfieldextras.h  enumkeys.h  enummainmenuchoice.h  enumoptions.h  enumpowerups.h  enumvalues.h  field.cpp  field.h  fieldextras.cpp  fieldextras.h  filefinder.cpp  filefinder.h  gameinfo.cpp  gameinfo.h  (+105 more)
